[project]
name = "support-desk-env"
version = "0.1.0"
description = "OpenEnv-compatible customer support simulation"
authors = [{name = "Ashwin"}]
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[tool.openenv]
entrypoint = "env:app"
